# manager-go

./: CMakeLists.txt  build_scenes.py  run.sh
include/ecs/: components.h  scenes.h  systems.h
scenes/: test.scene  test2.scene
src/: built_scenes.c  main.c  scenes.c
src/scenes/: mainMenu.c  splash.c  test.c
src/systems/: beginDraw.c  drawCircle.c  drawSprite.c  endDraw.c  move.c  updateSplashSprite.c
